[ASSET_EXPLORER]: get assets for the rootLocation if it is defined, fixed chart height and contextMenu overflow

--- a/src/assets/pxs-global.scss
+++ b/src/assets/pxs-global.scss
@@ -1386,3 +1386,7 @@ mat-form-field {
   max-height: none !important;
   overflow: hidden !important;
 }
+
+.highcharts-container {
+  overflow: visible !important;
+}
